swagger documentation added
