# examples/flask_sklearn_example/schemas.py
@@ -1,0 +1,6 @@
+from typing import List
+from pydantic import BaseModel
+
+
+class FeatureVector(BaseModel):
+    data: List[float]
